@@ -207,8 +207,8 @@ DIST netbeans-xml-6.1_alpha20080106171826.tar.bz2 4614098 RMD160 12e446600a2b77a
 DIST netbeans-xml-6.1_alpha20080118072101.tar.bz2 4595774 RMD160 d70bd808298fa11ce30c5d77bd8a0690bbe566d4 SHA1 8111cd74f8fe9aa256b30ba064f1956bffd6f566 SHA256 b115bf2059308623e945e0e35beeb5dba93586bba505c34548cca15bf1d5b916
 DIST netbeans-xtest-6.1_alpha20080106171826.tar.bz2 1528227 RMD160 d47871987b72dc45794413a3658328c9c364795e SHA1 1e37147c5d5f45f13f8a6e4085a3fd816fa7baab SHA256 7e8d9bc499875a6f7af0d8172077da947184fad390a3b3ce9b76f8ff1a7a23e3
 DIST netbeans-xtest-6.1_alpha20080118072101.tar.bz2 1526613 RMD160 0ae8cf164a9f346d8eb6188f68240e657b05e7b2 SHA1 ca14463c1c47464a26cd9511946a09b3ff451984 SHA256 555412a9c6e83336127997e9b88420114bd2acf948be7cfbccf069e6dedf7201
-EBUILD netbeans-6.0.ebuild 32689 RMD160 9c18de8a6252e2f6fa6133d78ced9984b6316c7d SHA1 99e914f3b1826ff304a5bd2bfbb1d88e7df917fb SHA256 b925fcbaf4258a14ac2cd0a72c53580b9445e94424f9fdd8a504e823b5b7a3b1
-EBUILD netbeans-6.1_alpha20080106171826.ebuild 33854 RMD160 71088057d2bbb534a91e660483651022e62ae78d SHA1 e184f76ffbbf99c0a2493ed4ebf7f98ec7b1c80c SHA256 a87dd54396145bcc558e7c0e8c03bfab09845cc4344e16cc08627741b898b474
-EBUILD netbeans-6.1_alpha20080118072101.ebuild 33717 RMD160 d2db2a88a149342a5d57093e7aff6b8c16b1f75e SHA1 480a66b3c5762bfbd6c113c74713076f0438dd5f SHA256 0cea1564ae5e93aea04ade028718664152a99428ce0b31062fa0dd194469bdc9
-MISC ChangeLog 20796 RMD160 8ef3833d4f4a4ce207536cec8f1c1dc7a0f4a6da SHA1 3e00cfa007a073a16b058f920e0e51235983c8ca SHA256 e8b51b4e4ee51c21a453b2f5637ea9230b98a0c68d0cbc0db2a85fde6ac25a44
+EBUILD netbeans-6.0.ebuild 32690 RMD160 53bf60c90e06f5fbb4b08a2363e750abf0a1b563 SHA1 9725266d8090a628691fa55fa179d5f8c72a3799 SHA256 a663b402ecd295ed316307b1be3772781e9f87c4013f6b1670a1ce1ca99d7669
+EBUILD netbeans-6.1_alpha20080106171826.ebuild 33855 RMD160 ae4eba462195986b97375e33c01cf5a7d5698856 SHA1 9a3da3f7ecf88a66ce861405e23fb30f7fa46907 SHA256 88dbde63e2f62824878f7821870c4ad4b8fed800b35a5998f6786034730ff747
+EBUILD netbeans-6.1_alpha20080118072101.ebuild 33718 RMD160 d0a7523c7f498aabbab5a9c470a6a0a303fdd2e6 SHA1 a8324798510414849047288ce7a59059e0764ad1 SHA256 a3641fa150d881f061933cc40657bd5ec824d9190dc8c435eb536d121f6d1226
+MISC ChangeLog 20985 RMD160 2fcfa9970e7e1c294a706c8219592a0624b3fa15 SHA1 be1a0578542ef97f327ff1858509fe2f164fd7e9 SHA256 56452d93c76ef6b52b4ee530681c060765a63a46a4a607703ae1ef6192f5c916
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
